Changelog
=========

0.2 (unreleased)
----------------

- Nothing changed yet.


0.1 (2010-08-31)
----------------

* Initial release
